--- a/style.css
+++ b/style.css
@@ -1,32 +1,87 @@
 body {
+	margin: 0 auto;
 	background: #fff;
 	color: #222;
-	font-family: arial,sans-serif;
-	font-size: 13px;
+	font: 13px arial,sans-serif;
 }
 
-a {
-
+p {
+	margin-bottom: 22px;
 }
 
-a:hover {
+nav {
+	position: absolute;
+	width: 100%;
+	top: 0;
+}
+
+nav ul {
+	margin: 0 auto;
+	list-style: none;
+	text-align: right;
+}
+
+nav li {
+	display: inline-block;
+	margin-right: 20px;
+	line-height: 44px;
+	vertical-align: middle;
+}
+
+nav li a {
+	text-decoration: none;
+	color: #222;
+	opacity: 0.95;
+}
+
+nav li a:hover {
 	text-decoration: underline;
 }
 
-#header {
-	text-align: right;
-	background-position: -132px -38px;
+nav button {
+    outline: none;
+    height: 30px;
+    width: 71px;
+    line-height: 27px;
+	background-color: #4285f4;
+	border: 1px solid #4285f4;
+    border-radius: 2px;
+    color: #fff;
+    font-weight: bold;
+    font-family: arial, sans-serif;
+    margin: 11px 4px;
+	padding: 0px 5px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.grid {
+	vertical-align: middle;
+	height: 30px;
+	width: 30px;
 }
 
 #main {
 	text-align: center;
+	width: 100%;
+	margin-top: 198px;
 }
 
-#main form {
-
+form input {
+	width: 564px;
+	height: 38px;
+	border: 1px solid #d9d9d9;
+	margin-top: 5px;
+	margin-bottom: 0px;
+	margin-left: 16px;
+	padding-left: 10px;
+	padding-right: 40px;
+	background-image: url('./resources/mic.png');
+	background-repeat: no-repeat;
+	background-position: right;
 }
 
-#main form button {
+form button {
     height: 36px;
     line-height: 27px;
 	background-color: #f2f2f2;
@@ -34,26 +89,54 @@ a:hover {
     border-radius: 2px;
     color: #757575;
     font-weight: bold;
-    margin: 11px 4px;
-    padding: 0 16px;
+    font-family: arial, sans-serif;
+    margin: 10px 2px;
+	padding: 0px 17px;
+	text-align: center;
 }
 
-#footer {
+footer {
 	background:rgb(242, 242, 242);
     border-top: 1px solid #e4e4e4;
 	color: #666;
-	margin-left: -27px;
-	display: inline-block;
     height: 40px;
 	width: 100%;
 	position: fixed;
 	bottom: 0px;
 	font-size: small;
     line-height: 40px;
-    padding-left: 27px;
 }
 
-.nav {
-	display: inline;
-	margin-left: 30px;
+footer ul {
+	margin-right: 30px;
+	list-style: none;
+}
+
+footer li a {
+	text-decoration: none;
+	color: #666;
+}
+
+footer li a:hover {
+	text-decoration: underline;
+}
+
+#left_links {
+	float: left;
+	margin-left: 3px;
+}
+
+#right_links {
+	text-align: right;
+}
+
+
+#left_links li {
+	padding-left: 27px;
+	display: inline-block;
+}
+
+#right_links li {
+	padding-left: 27px;
+	display: inline-block;
 }
